temp/nsg.json
C:\WINDOWS\System32>az network nsg list
[
  {
    "defaultSecurityRules": [
      {
        "access": "Allow",
        "description": "Allow inbound traffic from all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationApplicationSecurityGroups": null,
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"4e0a4ad8-6fdc-46a4-b6ec-8dce41c54af3\"",
        "id": "/subscriptions/494df0b8-1c73-46ec-be20-86916386dba2/resourceGroups/Tenant1/providers/Microsoft.Network/networkSecurityGroups/dc01-nsg/defaultSecurityRules/AllowVnetInBound",
        "name": "AllowVnetInBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "Tenant1",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourceApplicationSecurityGroups": null,
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow inbound traffic from azure load balancer",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationApplicationSecurityGroups": null,
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"4e0a4ad8-6fdc-46a4-b6ec-8dce41c54af3\"",
        "id": "/subscriptions/494df0b8-1c73-46ec-be20-86916386dba2/resourceGroups/Tenant1/providers/Microsoft.Network/networkSecurityGroups/dc01-nsg/defaultSecurityRules/AllowAzureLoadBalancerInBound",
        "name": "AllowAzureLoadBalancerInBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "Tenant1",
        "sourceAddressPrefix": "AzureLoadBalancer",
        "sourceAddressPrefixes": [],
        "sourceApplicationSecurityGroups": null,
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all inbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationApplicationSecurityGroups": null,
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"4e0a4ad8-6fdc-46a4-b6ec-8dce41c54af3\"",
        "id": "/subscriptions/494df0b8-1c73-46ec-be20-86916386dba2/resourceGroups/Tenant1/providers/Microsoft.Network/networkSecurityGroups/dc01-nsg/defaultSecurityRules/DenyAllInBound",
        "name": "DenyAllInBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "Tenant1",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourceApplicationSecurityGroups": null,
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationApplicationSecurityGroups": null,
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"4e0a4ad8-6fdc-46a4-b6ec-8dce41c54af3\"",
        "id": "/subscriptions/494df0b8-1c73-46ec-be20-86916386dba2/resourceGroups/Tenant1/providers/Microsoft.Network/networkSecurityGroups/dc01-nsg/defaultSecurityRules/AllowVnetOutBound",
        "name": "AllowVnetOutBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "Tenant1",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourceApplicationSecurityGroups": null,
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to Internet",
        "destinationAddressPrefix": "Internet",
        "destinationAddressPrefixes": [],
        "destinationApplicationSecurityGroups": null,
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"4e0a4ad8-6fdc-46a4-b6ec-8dce41c54af3\"",
        "id": "/subscriptions/494df0b8-1c73-46ec-be20-86916386dba2/resourceGroups/Tenant1/providers/Microsoft.Network/networkSecurityGroups/dc01-nsg/defaultSecurityRules/AllowInternetOutBound",
        "name": "AllowInternetOutBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "Tenant1",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourceApplicationSecurityGroups": null,
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all outbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationApplicationSecurityGroups": null,
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"4e0a4ad8-6fdc-46a4-b6ec-8dce41c54af3\"",
        "id": "/subscriptions/494df0b8-1c73-46ec-be20-86916386dba2/resourceGroups/Tenant1/providers/Microsoft.Network/networkSecurityGroups/dc01-nsg/defaultSecurityRules/DenyAllOutBound",
        "name": "DenyAllOutBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "Tenant1",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourceApplicationSecurityGroups": null,
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      }
    ],
    "etag": "W/\"4e0a4ad8-6fdc-46a4-b6ec-8dce41c54af3\"",
    "id": "/subscriptions/494df0b8-1c73-46ec-be20-86916386dba2/resourceGroups/Tenant1/providers/Microsoft.Network/networkSecurityGroups/dc01-nsg",
    "location": "westeurope",
    "name": "dc01-nsg",
    "networkInterfaces": [
      {
        "dnsSettings": null,
        "enableAcceleratedNetworking": null,
        "enableIpForwarding": null,
        "etag": null,
        "hostedWorkloads": null,
        "id": "/subscriptions/494df0b8-1c73-46ec-be20-86916386dba2/resourceGroups/Tenant1/providers/Microsoft.Network/networkInterfaces/dc01705",
        "ipConfigurations": null,
        "location": null,
        "macAddress": null,
        "name": null,
        "networkSecurityGroup": null,
        "primary": null,
        "privateEndpoint": null,
        "provisioningState": null,
        "resourceGroup": "Tenant1",
        "resourceGuid": null,
        "tags": null,
        "tapConfigurations": null,
        "type": null,
        "virtualMachine": null
      }
    ],
    "provisioningState": "Succeeded",
    "resourceGroup": "Tenant1",
    "resourceGuid": "fc57c216-f531-4daa-a4d3-51a83a5779f3",
    "securityRules": [],
    "subnets": null,
    "tags": null,
    "type": "Microsoft.Network/networkSecurityGroups"
  },
  {
    "defaultSecurityRules": [
      {
        "access": "Allow",
        "description": "Allow inbound traffic from all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationApplicationSecurityGroups": null,
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"9745bf47-9f3c-4a19-9818-ea4be0faaf62\"",
        "id": "/subscriptions/494df0b8-1c73-46ec-be20-86916386dba2/resourceGroups/Tenant1/providers/Microsoft.Network/networkSecurityGroups/Tenant1DefaultNSG/defaultSecurityRules/AllowVnetInBound",
        "name": "AllowVnetInBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "Tenant1",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourceApplicationSecurityGroups": null,
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow inbound traffic from azure load balancer",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationApplicationSecurityGroups": null,
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"9745bf47-9f3c-4a19-9818-ea4be0faaf62\"",
        "id": "/subscriptions/494df0b8-1c73-46ec-be20-86916386dba2/resourceGroups/Tenant1/providers/Microsoft.Network/networkSecurityGroups/Tenant1DefaultNSG/defaultSecurityRules/AllowAzureLoadBalancerInBound",
        "name": "AllowAzureLoadBalancerInBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "Tenant1",
        "sourceAddressPrefix": "AzureLoadBalancer",
        "sourceAddressPrefixes": [],
        "sourceApplicationSecurityGroups": null,
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all inbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationApplicationSecurityGroups": null,
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"9745bf47-9f3c-4a19-9818-ea4be0faaf62\"",
        "id": "/subscriptions/494df0b8-1c73-46ec-be20-86916386dba2/resourceGroups/Tenant1/providers/Microsoft.Network/networkSecurityGroups/Tenant1DefaultNSG/defaultSecurityRules/DenyAllInBound",
        "name": "DenyAllInBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "Tenant1",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourceApplicationSecurityGroups": null,
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationApplicationSecurityGroups": null,
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"9745bf47-9f3c-4a19-9818-ea4be0faaf62\"",
        "id": "/subscriptions/494df0b8-1c73-46ec-be20-86916386dba2/resourceGroups/Tenant1/providers/Microsoft.Network/networkSecurityGroups/Tenant1DefaultNSG/defaultSecurityRules/AllowVnetOutBound",
        "name": "AllowVnetOutBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "Tenant1",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourceApplicationSecurityGroups": null,
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to Internet",
        "destinationAddressPrefix": "Internet",
        "destinationAddressPrefixes": [],
        "destinationApplicationSecurityGroups": null,
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"9745bf47-9f3c-4a19-9818-ea4be0faaf62\"",
        "id": "/subscriptions/494df0b8-1c73-46ec-be20-86916386dba2/resourceGroups/Tenant1/providers/Microsoft.Network/networkSecurityGroups/Tenant1DefaultNSG/defaultSecurityRules/AllowInternetOutBound",
        "name": "AllowInternetOutBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "Tenant1",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourceApplicationSecurityGroups": null,
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all outbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationApplicationSecurityGroups": null,
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"9745bf47-9f3c-4a19-9818-ea4be0faaf62\"",
        "id": "/subscriptions/494df0b8-1c73-46ec-be20-86916386dba2/resourceGroups/Tenant1/providers/Microsoft.Network/networkSecurityGroups/Tenant1DefaultNSG/defaultSecurityRules/DenyAllOutBound",
        "name": "DenyAllOutBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "Tenant1",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourceApplicationSecurityGroups": null,
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      }
    ],
    "etag": "W/\"9745bf47-9f3c-4a19-9818-ea4be0faaf62\"",
    "id": "/subscriptions/494df0b8-1c73-46ec-be20-86916386dba2/resourceGroups/Tenant1/providers/Microsoft.Network/networkSecurityGroups/Tenant1DefaultNSG",
    "location": "westeurope",
    "name": "Tenant1DefaultNSG",
    "networkInterfaces": null,
    "provisioningState": "Succeeded",
    "resourceGroup": "Tenant1",
    "resourceGuid": "ab95eb52-aec2-4158-b086-e9346127f143",
    "securityRules": [],
    "subnets": null,
    "tags": null,
    "type": "Microsoft.Network/networkSecurityGroups"
  }
]
